--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>My contact details</h1>
-    <p>Email: hugo@hmcc.pt</p>
+    <p>Email: fake@email.com</p>
     <p>Phone number: 966666666</p>
     <p>Adress: ajsdhakjsdhjakshdjkasdhakjsdhjka</p>
 <hr size="3" noshade>
